// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Finished /> Basic Init 1`] = `
<span
  title="2018-11-26 15:09:01"
>
  2 minutes ago
</span>
`;

exports[`<Finished /> Finished with icon 1`] = `
<span
  title="2018-11-26 15:09:01"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-calendar fa-w-14 icon-addon-right"
    data-icon="calendar"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 192h424c6.6 0 12 5.4 12 12v260c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V204c0-6.6 5.4-12 12-12zm436-44v-36c0-26.5-21.5-48-48-48h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v36c0 6.6 5.4 12 12 12h424c6.6 0 12-5.4 12-12z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  2 minutes ago
</span>
`;

exports[`<Finished /> No datetime provided 1`] = `
<span
  title=""
>
  N/A
</span>
`;
